bug(user_panel) Fixed post thumbnails not covering flex box

--- a/pets/static/css/feed/feed.css
+++ b/pets/static/css/feed/feed.css
@@ -189,8 +189,8 @@ html, body {
   overflow-y: auto;
 }
 
-#userPanel img:not(.user-avatar),
-#userPanel video,
+#userPanel img:not(.user-avatar):not(.thumb img),
+#userPanel video:not(.thumb video),
 #commentsPanel img,
 #commentsPanel video {
   max-width: 100%;
